# MX25R

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
include/: MX25R.h
src/: MX25R.c
